--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -589,6 +589,9 @@ video {
 .mr-4 {
   margin-right: 1rem;
 }
+.ml-1 {
+  margin-left: 0.25rem;
+}
 .block {
   display: block;
 }
@@ -804,6 +807,9 @@ video {
 }
 .pb-8 {
   padding-bottom: 2rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 .text-center {
   text-align: center;
